--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ torchvision==0.16.0
 Pillow==10.0.1
 gunicorn==21.2.0
 numpy==1.26.4
---extra-index-url https://download.pytorch.org/whl/cpu
+opencv-python-headless
 
 
 # Flask==3.0.3
