brought back the extra url

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Pillow==10.0.1
 gunicorn==21.2.0
 numpy==1.26.4
 opencv-python-headless
+--extra-index-url https://download.pytorch.org/whl/cpu
 
 
 # Flask==3.0.3
