--- a/requirements.txt
+++ b/requirements.txt
@@ -25,8 +25,8 @@
 
 Flask==3.0.3
 ultralytics==8.3.0
-torch==2.1.0+cpu --index-url https://download.pytorch.org/whl/cpu
-torchvision==0.16.0+cpu --index-url https://download.pytorch.org/whl/cpu
+torch==2.1.0 --index-url https://download.pytorch.org/whl/cpu
+torchvision==0.16.0 --index-url https://download.pytorch.org/whl/cpu
 Pillow==10.0.1
 gunicorn==21.2.0
 numpy==1.26.4
